[package]
edition = "2021"
name = "asciigraphping"
version = "0.1.0"
authors = ["VS Code <vscode@microsoft.com>"]

[target.'cfg(unix)'.dependencies]
tokio-icmp-echo = "0.4.1"

[target.'cfg(windows)'.dependencies]
winping = "0.10.1"

[dependencies]
rasciigraph = "0.1.1"
fastping-rs = "0.2"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
arraydeque = "0.4"
tokio-stream = "0.1"
terminal_size = "0.2.1"
yata = "0.6.1"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 3     # Optimize for speed.
lto = true
codegen-units = 1
